# sampquery

./: .coveragerc  .gitignore  .pylintrc  AUTHORS.md  CHANGELOG.md  README.md  compile.bash  example.py  main.py  pyproject.toml  requirements.txt  run-examples.bat  run-examples.sh  setup.py
.github/workflows/: ci.yml
examples/: another-example.py  megaxtreme.py  new-example.py  server_example.py
pysampquery/: __init__.py  client.py  rule.py  server.py  utils.py
sampquery/: __init__.py  client.py  exceptions.py  player.py  rule.py  server.py  utils.py
src/pysampquery/: __init__.py  client.py  exceptions.py  player.py  rule.py  utils.py
