[project]
name = "pysampquery"
version = "0.0.1"
description = "A better and fixed SA:MP Query Client written in Python"
authors = [
    { name = "Leo Araya", email = "larayavrs@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "trio",
  "faust-cchardet",
  "asyncio",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "samp_query/**.py",
    "samp_query/py.typed",
]

[tool.flake8]
exclude = [
    ".git",
    ".mypy_cache",
    "__pycache__",
    "env",
    "build",
    "dist",
]

[tool.mypy]
strict = true
files = ["."]
exclude = [
    ".git",
    ".mypy_cache",
    "__pycache__",
    "env",
    "build",
    "dist",
    "docs",
]
